--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 :root {
     --primary: #9c7414;
     --secondary: #191C24;
-    --light: #6C7293;
+    --light: #9c7414;
     --dark: #000000;
 }
 
